# mex_gene_archive

./: .gitignore  Changelog.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci-test.yml
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/tests/: control  run-tests
debian/upstream/: signing-key.asc
docs/: api.rst  conf.py  index.rst  overview.rst  specification.rst
mex_gene_archive/: anndata.py  filter.py  kbpython.py  manifest.py  mmio.py  reader.py  starsolo.py  utils.py
tests/: stage_data.py  test_anndata.py  test_filter.py  test_kbpython.py  test_manifest.py  test_starsolo.py  test_utils.py
