[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "mex_gene_archive/_version.py"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
skip_missing_interpreters = True

[testenv]
commands = pytest --cov=mex_gene_archive
deps = 
  pytest
  pytest-cov
extras =
  test
"""
