[metadata]
name = mex_gene_archive
description = matrix market tar archive access utilities
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
url = https://github.com/detrout/mex_gene_archive
author = Diane Trout
author_email = diane@caltech.edu
license = BSD-3
license_file = LICENSE.txt
project_urls =
   Source = https://github.com/detrout/mex_gene_archive
   Tracker = https://github.com/detrout/mex_gene_archive/issues

[options]
packages = find:
setup_requires =
  setuptools_scm

[options.extras_require]
test =
  pytest
  numpy
